--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	olikraus/U8g2@^2.36.15
+	adafruit/DHT sensor library@^1.4.6
