--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	olikraus/U8g2@^2.36.15
 	adafruit/DHT sensor library@^1.4.6
+	thingsboard/TBPubSubClient@^2.12.1
