--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,6 @@ framework = arduino
 lib_deps = 
 	olikraus/U8g2@^2.36.15
 	adafruit/DHT sensor library@^1.4.6
-	thingsboard/TBPubSubClient@^2.12.1
+	thingsboard/ThingsBoard@0.14.0
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/ArduinoHttpClient@^0.6.1
